Organize code debug VIT

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@ VIT_backbone/__pycache__/vit_transformer.cpython-39.pyc
 sample-1gb.txt
 
 .gitignore
+
+VIT_backbone/VIT_transformer_debug.ipynb
+
+
